--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/?gh_src=82a8057f1'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/?gh_src=82a8057f1'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -204,7 +204,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<h5><a href='http://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -216,7 +216,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=ng3dlMw8'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=ng3dlMw8'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -284,7 +284,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lendi.recruiterbox.com/jobs/fk03ipk/'>
+<h5><a href='https://lendi.recruiterbox.com/jobs/fk03ipk/'>
     Senior Site Reliability Engineer at Lendi
 </a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
@@ -306,11 +306,11 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/lead-site-reliability-engineer-staff-principal-1926450/'>Lead Site Reliability Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -347,7 +347,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -383,7 +383,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Experienced Site Reliability Engineer. Remote, Multiple Countries; Full Time; 
 Engineering; Experienced. Share. Theorem is a software consultancy that 
